--- a/templates/error.html
+++ b/templates/error.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-</head>
-<body>
-  Catalog App
+{% extends "layout.html" %}
+{% block body %}
 
   <h2>Requested category or item doesn't exist!</h2>
-</body>
+{% endblock %}
