--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-</head>
-<body>
-  Catalog App
+{% extends "layout.html" %}
+{% block body %}
 
   <h2>Delete item </h2>
   Are you sure you want to delete?
@@ -13,4 +8,4 @@
     <input type="hidden" name="item_title" value="{{item}}">
     <input type="submit" value="Submit"></input>
   </form>
-</body>
+{% endblock %}
