--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,30 +1,29 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-</head>
-<body>
-  Catalog App
+{% extends "layout.html" %}
+{% block body %}
 
   <h2> {% if (item['title']) %}Edit {% else %}Add {% endif %}item</h2>
-  <form action={% if (item['title']) %}"/catalog/edit" {% else %}"/catalog/add" {% endif %} method="POST">
+  <form action={% if (item['title']) %} "/catalog/edit" {% else %}"/catalog/add"
+					{% endif %} method="POST">
     Title:
     <br/>
-    <input type="text" name="title" value={{item['title']}}></input>
+    <input type="text" name="title" value="{{ item['title'] }}" ></input>
     <br/>
-    <input type="hidden" name="original_title" value="{{item['title']}}">
+    <input type="hidden" name="original_title" value="{{ item['title'] }}">
     <p>
     Description:
     <br/>
     <textarea name="description">{{item['description']}}</textarea>
-    <input type="hidden" name="original_description" value="{{item['description']}}">
+    <input type="hidden" name="original_description"
+				value="{{ item['description'] }}">
     <br/>
     <p>
     Category:
     <br/>
     <select name="categories">Categories:
       {% for cat in categories %}
-      <option value="{{ cat['name'] }}" {% if (category['name'] == cat['name']) %} selected {% else  %}{% endif %}>{{cat['name']}}</option> 
+      <option value="{{ cat['name'] }}"
+		      {% if (category['name'] == cat['name']) %} selected
+		      {% else  %}{% endif %}>{{cat['name']}}</option> 
       {% endfor %}
     </select>
     <br/>
@@ -32,4 +31,4 @@
     <input type="submit" value="Submit"></input>
   </form>
 
-</body>
+{% endblock %}
