--- a/templates/item.html
+++ b/templates/item.html
@@ -1,13 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-</head>
-<body>
-  Catalog App
-  <h2> {{ category }}</h2>
+{% extends "layout.html" %}
+{% block body %}
+
+  <h2> {{ item['title'] }}</h2>
   <br /> Description: 
   {{ item.description }}
   <br/>
   <a href="/catalog/{{item['title']}}/edit">Edit</a> | <a href="/catalog/{{item['title']}}/delete">Delete</a>
-</body>
+{% endblock %}
